Lighter and softer yellow color for text in events

--- a/home/static/css/event_info.scss
+++ b/home/static/css/event_info.scss
@@ -8,7 +8,7 @@
 // Variables
 $crd-primary-color: #1e1e2d;
 $crd-secondary-color: #52ba52;
-$crd-accent-color: #ffcc00;
+$crd-accent-color: #f4df89;
 $crd-text-color: #fff;
 $crd-text-muted: #ddd;
 $crd-btn-hover-lighten: 10%;
