Add anchors to headings and install a package to insert anchors in text

--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -58,6 +58,17 @@ a {
   }
 }
 
+// Anchor link styling - make anchors invisible but targetable
+span[id^="block-"] {
+  display: block;
+  position: relative;
+  
+  // Offset anchor position to account for fixed headers if any
+  &:target {
+    scroll-margin-top: 2rem; // Adjust this value based on your header height
+  }
+}
+
 
 // Create a mixin for overriding margins and paddings
 @mixin block-heading-spacing {
