Navigate directly from side-bar to talks

--- a/beobgrp_site/templates/includes/side_info.html
+++ b/beobgrp_site/templates/includes/side_info.html
@@ -4,7 +4,7 @@
             <b>{{ event.status|upper }}!:</b>
             <div class="strikethrough">
         {% endif %}
-        {{ event.event_type }}: <b><a href="{{ event.get_parent.get_url }}">{{ event.event_title }}</a></b> am
+        {{ event.event_type }}: <b><a href="{{ event.get_parent.get_url }}#event-{{ event.web_id }}">{{ event.event_title }}</a></b> am
         <b>{{ event.start_time|date:"D" }} {{ event.start_time|date:"d.m, H:i" }} Uhr</b>
         {% if event.status %}
             </div>
