--- a/home/templates/blocks/event_list_block.html
+++ b/home/templates/blocks/event_list_block.html
@@ -21,7 +21,7 @@
                             display: block;
                         }
                     </style>
-                    <div class="card">
+                    <div class="card" id="event-{{ event.web_id }}">
                         <div class="card-header columns {{ event.warning_class }}">
                             {% if event.status %}
                                 <span class="column is-text-col">{{ event.status|upper }}! </span>
